home page almost done. need to fix header and add links into footer

--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Just Fix It</title>
     <link rel="stylesheet" href="./assets/css/app.css">
 </head>
+
 <body>
     <header class="header">
         <!-- <h1>"Just Fix It"</h1>
@@ -15,7 +17,7 @@
 
         <nav>
             <div class="business-title">
-                <p>"Just Fix It"</p>
+                <p class="justfixit">"Just Fix It"</p>
                 <p class="phone">(705) 689-RICK (689-7425)</p>
 
 
@@ -23,32 +25,38 @@
             <!-- <h5>OVER 35 YEARS EXPERIENCE</h5>
             <h5>(705) 689-RICK (689-7425)</h5> -->
             <a href="#" class="toggle-button">
-              <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </a>
             <div class="navbar-links">
-              <ul>
-                <li><a href="./home.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
+                <ul>
+                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </div>
         </nav>
 
     </header>
 
     <section>
-        <h3>OVER 35 YEARS EXPERIENCE</h3>
-        <h6>New & Used</h6>
-        <h6>Pump Repairs & Systems</h6>
-        <h6>Electric Motor Repairs</h6>
+        <h3 class="experience">OVER 35 YEARS EXPERIENCE</h3>
+        <div class="options">
+            <h6>We offer a wide range of services for pumps, wells, and water lines. Our experienced technician provides
+                installation, upgrades, and repairs for pumps and wells, including electric motor repairs. We also offer
+                services for water line freeze-ups, heat lines, and hot tubs. Our goal is to provide reliable and
+                efficient services with excellent customer service. Contact us today to schedule an appointment or learn
+                more about how we can assist you! </h6>
+            <h6>* Warranty Dealer for Myers, Goulds and Campbell Hausfield *</h6>
+
+        </div>
     </section>
 
     <div>
-        <img src="./assets/images/shop.png" alt="Just Fix It Shop" width=30% height=50% class="shop-photo" />
+        <img src="./assets/images/shop2.png" alt="Just Fix It Shop" width=80% height=100% class="shop-photo" />
     </div>
-
+    <!-- 
     <section>
         <ul>
             <li>Water Pump Systems - New Installations and Repairs</li>
@@ -56,13 +64,31 @@
             <li>Electronic Motor Repairs</li>
             <li>Circulations</li>
         </ul>
-        <h6>* Warranty Dealer for Myers, Gould and Campbell Hausifield *</h6>
-    </section>
 
-    <footer>
+    </section> -->
 
+    <footer class="footer">
+
+        <div class="footer-title">
+            <h3>Connect with Us!</h3>
+        </div>
+
+        <div class="footer-logos">
+            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/facebook.png'
+                    alt="facebook" /></a>
+
+            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
+                    alt="Instagram" /></a>
+
+            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
+                    alt="Yelp" /></a>
+        </div>
+
+        <div class="copyright">
+            Copyright @ 2023 Just Fix It
+        </div>
     </footer>
-    
+
 
 
     <script src="./assets/js/script.js"></script>
