--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
               <ul>
                 <li><a href="./home.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
         </nav>
@@ -46,6 +46,28 @@
             
         <p>Thank you for considering Just Fix It for your pump repair needs. We look forward to working with you to ensure that your equipment is running smoothly and efficiently.</p>
     </section>
+
+    <footer class="footer">
+
+        <div class="footer-title">
+            <h3>Connect with Us!</h3>
+        </div>
+
+        <div class="footer-logos">
+            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/facebook.png'
+                    alt="facebook" /></a>
+
+            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
+                    alt="Instagram" /></a>
+
+            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
+                    alt="Yelp" /></a>
+        </div>
+
+        <div class="copyright">
+            Copyright @ 2023 Just Fix It
+        </div>
+    </footer>
 
 
     <script src="./assets/js/script.js"></script>
