added yelp link

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
                     alt="Instagram" /></a>
 
-            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
+            <a href="https://www.yelp.ca/biz/just-fix-it-severn-bridge" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
                     alt="Yelp" /></a>
         </div>
 
