renamed home page for deployment

--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <title>Just Fix It</title>
     <link rel="stylesheet" href="./assets/css/app.css">
 </head>
-
 <body>
     <header class="header">
         <!-- <h1>"Just Fix It"</h1>
@@ -17,7 +15,7 @@
 
         <nav>
             <div class="business-title">
-                <p class="justfixit">"Just Fix It"</p>
+                <p>"Just Fix It"</p>
                 <p class="phone">(705) 689-RICK (689-7425)</p>
 
 
@@ -25,47 +23,29 @@
             <!-- <h5>OVER 35 YEARS EXPERIENCE</h5>
             <h5>(705) 689-RICK (689-7425)</h5> -->
             <a href="#" class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
             </a>
             <div class="navbar-links">
-                <ul>
-                    <li><a href="./home.html">Home</a></li>
-                    <li><a href="./about.html">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+              <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+              </ul>
             </div>
         </nav>
 
     </header>
-
     <section>
-        <h3 class="experience">OVER 35 YEARS EXPERIENCE</h3>
-        <div class="options">
-            <h6>We offer a wide range of services for pumps, wells, and water lines. Our experienced technician provides
-                installation, upgrades, and repairs for pumps and wells, including electric motor repairs. We also offer
-                services for water line freeze-ups, heat lines, and hot tubs. Our goal is to provide reliable and
-                efficient services with excellent customer service. Contact us today to schedule an appointment or learn
-                more about how we can assist you! </h6>
-            <h6>* Warranty Dealer for Myers, Goulds and Campbell Hausfield *</h6>
+        <p>Welcome to Just Fix It, a small business operated by the experienced and knowledgeable owner Rick. With over 35 years of experience in the industry, Rick is a skilled professional who specializes in the repair, installation, and maintenance of both new and used pumps.</p>
 
-        </div>
+        <p> At Just Fix It, we provide a range of services including pump repairs, pump systems, and electric motor repairs. We are experts in water pump systems, offering new installations and repairs for submersibles and jet pumps. We also specialize in electronic motor repairs and circulations, ensuring that your equipment is running at its best.</p>
+            
+        <p> Our commitment to quality workmanship and customer satisfaction has earned us a reputation as one of the most reliable and trusted pump repair companies in Severn Bridge, Ontario. When you choose Just Fix It, you can trust that you are working with an experienced professional who is dedicated to providing you with the best possible service.</p>
+            
+        <p>Thank you for considering Just Fix It for your pump repair needs. We look forward to working with you to ensure that your equipment is running smoothly and efficiently.</p>
     </section>
-
-    <div>
-        <img src="./assets/images/shop2.png" alt="Just Fix It Shop" width=80% height=100% class="shop-photo" />
-    </div>
-    <!-- 
-    <section>
-        <ul>
-            <li>Water Pump Systems - New Installations and Repairs</li>
-            <li>Submersibles & Jet Pumps</li>
-            <li>Electronic Motor Repairs</li>
-            <li>Circulations</li>
-        </ul>
-
-    </section> -->
 
     <footer class="footer">
 
@@ -90,8 +70,6 @@
     </footer>
 
 
-
     <script src="./assets/js/script.js"></script>
 </body>
-
 </html>
