home page complete

--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
 
 <body>
     <header class="header">
-        <!-- <h1>"Just Fix It"</h1>
-        <h5>OVER 35 YEARS EXPERIENCE</h5>
-        <h5>(705) 689-RICK (689-7425)</h5> -->
 
-        <nav>
+        <nav class="navbar">
             <div class="business-title">
                 <p class="justfixit">"Just Fix It"</p>
                 <p class="phone">(705) 689-RICK (689-7425)</p>
 
 
             </div>
-            <!-- <h5>OVER 35 YEARS EXPERIENCE</h5>
-            <h5>(705) 689-RICK (689-7425)</h5> -->
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -77,7 +72,7 @@
             <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/facebook.png'
                     alt="facebook" /></a>
 
-            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
+            <a href="https://www.instagram.com/justfixit.pumps/" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
                     alt="Instagram" /></a>
 
             <a href="https://www.yelp.ca/biz/just-fix-it-severn-bridge" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
