--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@
               <span class="bar"></span>
             </a>
             <div class="navbar-links">
-              <ul>
-                <li><a href="./home.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-              </ul>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
             </div>
         </nav>
 
