--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </a>
             <div class="navbar-links">
                 <ul>
-                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
