fixed navbar styling for all pages and added rick photo

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just Fix It</title>
     <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="./assets/css/about.css">
 </head>
 <body>
     <header class="header">
@@ -13,7 +14,7 @@
         <h5>OVER 35 YEARS EXPERIENCE</h5>
         <h5>(705) 689-RICK (689-7425)</h5> -->
 
-        <nav>
+        <nav class="navbar">
             <div class="business-title">
                 <p>"Just Fix It"</p>
                 <p class="phone">(705) 689-RICK (689-7425)</p>
