--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <nav>
+        <nav class="navbar">
             <div class="business-title">
                 <p class="justfixit">"Just Fix It"</p>
                 <p class="phone">(705) 689-RICK (689-7425)</p>
