wokring on contact page. added image of shop from road and google map picture with link to google maps when clicked

--- a/about.html
+++ b/about.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     <header class="header">
-        <!-- <h1>"Just Fix It"</h1>
-        <h5>OVER 35 YEARS EXPERIENCE</h5>
-        <h5>(705) 689-RICK (689-7425)</h5> -->
 
         <nav class="navbar">
             <div class="business-title">
@@ -21,13 +18,13 @@
 
 
             </div>
-            <!-- <h5>OVER 35 YEARS EXPERIENCE</h5>
-            <h5>(705) 689-RICK (689-7425)</h5> -->
+
             <a href="#" class="toggle-button">
               <span class="bar"></span>
               <span class="bar"></span>
               <span class="bar"></span>
             </a>
+
             <div class="navbar-links">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
@@ -35,12 +32,15 @@
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
+
         </nav>
 
     </header>
+
     <section class="about-us">
             <h2 className='about-title'>About Just Fix It</h2>
     </section>
+
     <section class="about-info">
 
         <div class="about-pic">
@@ -69,7 +69,7 @@
             <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/facebook.png'
                     alt="facebook" /></a>
 
-            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
+            <a href="https://www.instagram.com/justfixit.pumps/" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
                     alt="Instagram" /></a>
 
             <a href="https://www.yelp.ca/biz/just-fix-it-severn-bridge" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
@@ -79,9 +79,11 @@
         <div class="copyright">
             Copyright @ 2023 Just Fix It
         </div>
+
     </footer>
 
 
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
