--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,15 @@
 
     <section>
 
+
+        <div>
+            <img src="./assets/images/shop3.png" alt="Just Fix It Shop" width=80% height=100% class="shop-contact" />
+        </div>
+
+        <div>
+            <a  href="https://goo.gl/maps/aMb1DGywTjMkZaU18" target="_blank"><img src="./assets/images/map.png" alt="Map of Just Fix It" width=80% height=100% class="map-contact" /></a>
+        </div>
+
     </section>
 
     <footer class="footer">
@@ -47,7 +56,7 @@
             <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/facebook.png'
                     alt="facebook" /></a>
 
-            <a href="https://" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
+            <a href="https://www.instagram.com/justfixit.pumps/" target="_blank"><img width="50px" height="50px" src='./assets/images/instagram.png'
                     alt="Instagram" /></a>
 
             <a href="https://www.yelp.ca/biz/just-fix-it-severn-bridge" target="_blank"><img width="50px" height="50px" src='./assets/images/yelp_logo.png'
