--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just Fix It</title>
     <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
 </head>
 <body>
     <header class="header">
@@ -35,6 +36,9 @@
 
     <section>
 
+        <section class="contact-us">
+            <h2 className='about-title'>Contact Just Fix It</h2>
+        </section>
 
         <div>
             <img src="./assets/images/shop3.png" alt="Just Fix It Shop" width=80% height=100% class="shop-contact" />
