added phone to contact page. checking if tel link works

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,11 @@
             <h2 className='about-title'>Contact Just Fix It</h2>
         </section>
 
+        <section>
+            <h5 href="tel:705-689-7425">Call us at 705-689-RICK(7425)</h5>
+            <h5>We are located at 1332 Southwood Road, Severn Bridge ON</h5>
+        </section>
+
         <div>
             <img src="./assets/images/shop3.png" alt="Just Fix It Shop" width=80% height=100% class="shop-contact" />
         </div>
