contact info inputted and basic styling completed

--- a/contact.html
+++ b/contact.html
@@ -41,17 +41,22 @@
         </section>
 
         <section>
-            <h5 href="tel:705-689-7425">Call us at 705-689-RICK(7425)</h5>
-            <h5>We are located at 1332 Southwood Road, Severn Bridge ON</h5>
+            <!-- <h5 href="tel:705-689-7425">Call us at 705-689-RICK(7425)</h5> -->
+            <div  class='contact-phone-link' >
+                <a class="phone-cont" href="tel:7056897425">Call us at 705-689-RICK(7425)</a>
+            </div>
+            <h5 class="location">We are located at 1332 Southwood Road, Severn Bridge ON</h5>
+            <div>
+                <img src="./assets/images/shop3.png" alt="Just Fix It Shop" width=80% height=100% class="shop-photo" />
+            </div>
         </section>
 
-        <div>
-            <img src="./assets/images/shop3.png" alt="Just Fix It Shop" width=80% height=100% class="shop-contact" />
-        </div>
-
-        <div>
-            <a  href="https://goo.gl/maps/aMb1DGywTjMkZaU18" target="_blank"><img src="./assets/images/map.png" alt="Map of Just Fix It" width=80% height=100% class="map-contact" /></a>
-        </div>
+        <section>
+            <h6 class="location">* Click the map below for directions *</h6>
+            <div>
+                <a  href="https://goo.gl/maps/aMb1DGywTjMkZaU18" target="_blank"><img src="./assets/images/map.png" alt="Map of Just Fix It" width=80% height=100% class="shop-photo" /></a>
+            </div>
+        </section>
 
     </section>
 
