--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Just Fix It</title>
     <link rel="stylesheet" href="./assets/css/app.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DWW2Z8KTHW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DWW2Z8KTHW');
+</script>
 
 <body>
     <header class="header">
