updated about section

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     </header>
 
     <section class="about-us">
-            <h2 className='about-title'>About Just Fix It</h2>
+            <h2 className='about-title'>Just Fix It Pumps</h2>
     </section>
 
     <section class="about-info">
